<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_ichome2"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_naves"
            android:icon="@drawable/ic_icnave2"
            android:title="@string/menu_nave" />
        <item
            android:id="@+id/nav_modulo"
            android:icon="@drawable/ic_icmodulo2"
            android:title="@string/menu_modulo" />
        <item
            android:id="@+id/nav_itens"
            android:icon="@drawable/ic_icitens"
            android:title="@string/menu_itens" />
        <item
            android:id="@+id/nav_skilltree"
            android:icon="@drawable/ic_baseline_account_tree_24"
            android:title="@string/menu_skilltree" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/menu_logout" />

    </group>
</menu>