<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.fragments.LogDiskCostChartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#555555"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/lbl_pp_column1"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/lbl_pp_column2"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/lbl_pp_column3"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/lbl_pp_column4"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/lbl_pp_column5"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/lbl_pp_column6"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/lbl_pp_column7"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPontosPesquisa"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>


        </HorizontalScrollView>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:src="@drawable/ic_baseline_filter_list_48" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>